<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/welcome_bg" >

    <EditText
        android:id="@+id/login_username"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:alpha="1"
        android:background="@color/bg_white"
        android:ems="10"
        android:hint="@string/login_user_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/login_passwd"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login_username"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:alpha="1"
        android:background="@color/bg_white"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
		android:layout_below="@id/login_passwd"
		android:layout_marginTop="18dp"        
        android:orientation="horizontal" >

        <Button
            android:id="@+id/login_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_color_gray"
            android:background="@drawable/btn_register"
            android:text="@string/login_no" />

        <Button
            android:id="@+id/login_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_color_white"
            android:background="@drawable/btn_login"
            android:text="@string/login_ok" />
    </LinearLayout>

</RelativeLayout>