<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/welcome_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical" >

        <cn.fanfan.common.CircleImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fanfan" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/login"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login"
            android:textColor="@color/text_color_white"
            android:layout_gravity="center_horizontal"
            android:text="@string/login" />
        <Button
            android:id="@+id/register"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_register"
            android:textColor="@color/text_color_gray"
            android:layout_marginTop="15dp"
            android:text="@string/register" />

        <TextView
            android:id="@+id/look_around"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/text_color_light_gray"
            android:layout_marginTop="15dp"
            android:text="@string/welcome_look_around" />

    </LinearLayout>

</LinearLayout>
